Fix h1 heading on iPhone 5c.

--- a/css/main.scss
+++ b/css/main.scss
@@ -77,10 +77,7 @@ a {
 nav.row .columns:first-child {
   margin-bottom:1rem;
 }
-
-@media (min-width: 400px) {
-}
-@media (min-width: 550px) {
+@media (max-width: 568px) {
   nav.row .columns h1 {
     font-size:1.75rem;
   }
